# raytracing

./: CMakeLists.txt  Makefile  README.md  gpt  gpt_tracing.c  install_deps.sh  ray  raytracing.c
docs/: BUILD_GUIDE.md  GRAPHICS_CONCEPTS.md
examples/: performance_comparison.c  rasterization_example.c  raytracing_demo.c
include/: raytracing.h
src/: lighting.c  main.c  math_utils.c  scene.c  utils.c
